--- a/static/css/style.css
+++ b/static/css/style.css
@@ -262,3 +262,7 @@ a:active {text-decoration: none}	/* 选定的链接 */
         font-size: 36px;
     }
 }
+
+.search-button,.post-comment{
+    display: none;
+}
