--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
     <header>
-        <nav class="navbar navbar-tiffany rectangle" role="navigation">
+        <!-- <nav class="navbar navbar-tiffany rectangle" role="navigation">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -28,6 +28,49 @@
                         <li><a href="#stq=" class="search-button"><span class="octicon octicon-search"></span></a></li>
                     </ul>
                 </div>
+            </div>
+        </nav> -->
+        <nav class="navbar navbar-expand navbar navbar-expand-lg navbar-light bg-light t-b-b-1 mb-2" id="top">
+            <div class="container-fluid">
+              <a class="navbar-brand pc" href="/" style='margin-right: 0px;'>ooqn.com</a>
+              <a class="navbar-brand yd" href="/" style='margin-right: 0px;'>🙃</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+        
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-lg-0 pc">
+                  <li class="nav-item"><router-link class="nav-link active" to="/article">📰文章</router-link></li>
+                  <li class="nav-item"><router-link class="nav-link active" to="/essay">📝随笔</router-link></li>
+                  <li class="nav-item"><router-link class="nav-link active" to="/author">👨‍🎓作者</router-link></li>
+                  <li class="nav-item"><router-link class="nav-link active" to="/subject">📒专题</router-link></li>
+                  <li class="nav-item"><router-link class="nav-link active" to="/search">🔍搜索</router-link></li>
+                  <li class="nav-item" v-if="isAdmin"><a class="nav-link active" href="/admin.html">🧙‍♂️管理</a></li>
+                </ul>
+                <ul class="navbar-nav me-auto mb-lg-0 yd">
+                  <li class="nav-item dropdown float-start">
+                    <a class="nav-link active dropdown-toggle" href="#" data-bs-toggle="dropdown">菜单</a>
+                    <ul class="dropdown-menu">
+                      <li><router-link class="dropdown-item" to="/article">📰文章</router-link></li>
+                      <li><router-link class="dropdown-item" to="/essay">📝随笔</router-link></li>
+                      <li><router-link class="dropdown-item" to="/author">👨‍🎓作者</router-link></li>
+                      <li><router-link class="dropdown-item" to="/subject">📒专题</router-link></li>
+                      <li><router-link class="dropdown-item" to="/search">🔍搜索</router-link></li>
+                      <li v-if="isAdmin"><a class="dropdown-item" href="/admin.html">🧙‍♂️管理</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item float-start">
+                    <router-link class="nav-link active" to="/search">🔍搜索</router-link>
+                  </li>
+                </ul>
+                <form class="d-flex d-md-inline">
+                  <ul class="navbar-nav me-auto">
+                    <li class="nav-item" v-if="isLogin">
+                      <a class="nav-link active" >关于</a>
+                    </li>
+                  </ul>
+                </form>
+              </div>
             </div>
         </nav>
     </header>
