--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,268 +1,147 @@
----
-layout: null
----
-
-.navbar-tiffany,
-.banner{
-    background: -webkit-linear-gradient(45deg, rgba(0 , 0, 0, 0) 48%, rgba(0 , 0, 0, 0.1) 50%, rgba(0 , 0, 0, 0) 52%),
-    -webkit-linear-gradient(135deg, rgba(0 , 0, 0, 0) 48%, rgba(0 , 0, 0, 0.1) 50%, rgba(0 , 0, 0, 0) 52%);
-    background: linear-gradient(45deg, rgba(0 , 0, 0, 0) 48%, rgba(0 , 0, 0, 0.1) 50%, rgba(0 , 0, 0, 0) 52%),
-    linear-gradient(-45deg, rgba(0 , 0, 0, 0) 48%, rgba(0 , 0, 0, 0.1) 50%, rgba(0 , 0, 0, 0) 52%);
-    -webkit-background-size: 1em 1em;
-    background-size: 1em 1em;
+* {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+    resize: none;
+    outline: none;
+    font-family: "SF Pro SC", "SF Pro Text", "SF Pro Icons", "PingFang SC", Verdana, Arial, '微软雅黑', '宋体';
+    white-space: word-break !important;
 }
 
-.navbar-tiffany{
-    background-color: #2ca6cb;
-    border-top: 1px solid rgba(255,255,255,0.2);
-    border-bottom: 1px solid rgba(0,0,0,0.1);
-    box-shadow: 2px 4px 5px rgba(3,3,3,0.2);
-}
-
-.footnote-tiffany{
-    background: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0) 48%, rgba(255, 255, 255, 0.03) 50%, rgba(255, 255, 255, 0) 52%),
-    -webkit-linear-gradient(135deg, rgba(255, 255, 255, 0) 48%, rgba(255, 255, 255, 0.03) 50%, rgba(255, 255, 255, 0) 52%);
-    background: linear-gradient(45deg, rgba(255, 255, 255, 0) 48%, rgba(255, 255, 255, 0.03) 50%, rgba(255, 255, 255, 0) 52%),
-    linear-gradient(-45deg, rgba(255, 255, 255, 0) 48%, rgba(255, 255, 255, 0.03) 50%, rgba(255, 255, 255, 0) 52%);
-    -webkit-background-size: 1em 1em;
-    background-size: 1em 1em;
-}
-.footnote-tiffany{
-    background-color: #333333;
-    border-color: #2ca6cb;
-    box-shadow: 2px -4px 5px rgba(3,-3,3,0.2);
-}
-
-
-.navbar-tiffany .navbar-brand,
-.navbar-tiffany .navbar-text,
-.navbar-tiffany .nav>li>a{
-    color: #fff;
-}
-
-
-.navbar-tiffany .nav>li>a:hover,
-.navbar-tiffany .nav>li>a:focus,
-.navbar-tiffany .nav>li.active>a {
-    background: rgba(0, 0, 0, 0.2);
-    color: #fff;
-}
-.navbar-tiffany .navbar-toggle{
-    border-color: #fff;
-}
-
-.navbar-tiffany .navbar-toggle .icon-bar{
-    background-color: #fff;
-}
-
-.navbar-nav>li>a{
-    line-height: 1.42857143;
-}
-
-.footnote-tiffany a,
-.footnote-tiffany span{
-    color:#fff;
-
-}
-.footnote .foot-item{
-    display: inline-block;
-    width: 28px;
-    height: 28px;
-    line-height: 28px;
-    font-size: 18px;
-    text-align: center;
-    background: rgba(255,255,255,0.1);
-    border-radius: 3px 3px;
-    -webkit-transition: background .4s ease-in-out;
-    -moz-transition: background .4s ease-in-out;
-    -ms-transition: background .4s ease-in-out;
-    -o-transition: background .4s ease-in-out;
-    transition: background .4s ease-in-out;
-}
-
-.footnote .foot-item:hover{
-    background-color: #2ca6cb;
-    -webkit-transition: background .4s ease-in-out;
-    -moz-transition: background .4s ease-in-out;
-    -ms-transition: background .4s ease-in-out;
-    -o-transition: background .4s ease-in-out;
-    transition: background .4s ease-in-out;
-}
-
-/* footer */
-.footnote{
-    min-height: 50px;
-    line-height: 50px;
-    margin-top: -50px;
-    text-align: center;
-}
-
-html{
+#app {
     height: 100%;
-    padding: 0px 0px 0px 0px;
-    margin: 0px 0px 0px 0px;
 }
+
 body {
-    background-image: url({{ "/static/bg.jpg" | prepend: site.baseurl | prepend: site.url }});
-    height: 100%;
-    padding: 0px 0px 0px 0px;
-    margin: 0px 0px 0px 0px;
+    padding-right: 0px !important;
 }
 
-body,code,pre{
-    font-family:  "Menlo", "Monaco", "Consolas", "Courier New", "monospace", "Helvetica", "Tahoma", "Arial",
-    "WenQuanYi Micro Hei", "文泉驿微米黑", "STXihei", "华文细黑", "Microsoft YaHei", "微软雅黑", "SimSun", "宋体", "Heiti", "黑体", sans-serif;
-}
-
-body,.sheet,pre,code{
-    font-size: 17px;
-}
-
-
-a:link {text-decoration: none}		/* 未访问的链接 */
-a:visited {text-decoration: none}	/* 已访问的链接 */
-a:hover {text-decoration: none}	/* 鼠标移动到链接上 */
-a:active {text-decoration: none}	/* 选定的链接 */
-
-.main{
-    min-height: 100%;
-    padding-bottom: 130px;
-}
-
-.content{
-    padding-right: 0px;
-    padding-left: 0px;
-}
-
-.sheet{
-    word-break: break-all;
-	background-color:#f8f8fd;
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.4),0 0 30px rgba(10,10,0,0.1) inset;
-	-moz-box-shadow: 0 1px 2px rgba(0,0,0,0.4),0 0 30px rgba(10,10,0,0.1) inset;
-	-o-box-shadow: 0 1px 2px rgba(0,0,0,0.4),0 0 30px rgba(10,10,0,0.1) inset;
-	box-shadow: 0 1px 2px rgba(0,0,0,0.4),0 0 30px rgba(10,10,0,0.1) inset;
-}
-
-.sheet{
-    padding:10px 30px;
-}
-
-@media screen and (max-width: 767px) {
-    .sheet{
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-}
-
-/**
- * back to top
- */
-.page-scrollTop {
-	position: fixed;
-	right: 10px;
-	bottom: 10px;
-	width: 60px;
-	height: 60px;
-	background-color: #bbb;
-	border-radius:7px;
-	opacity: 0.7;
-	display: none;
-	z-index: 888;
-}
-.page-scrollTop .arrow{
-	margin:0 auto;
-	padding-top:11px;
-	width:0;
-	height: 0;
-	border-right: 15px solid transparent;
-	border-left: 15px solid transparent;
-	border-bottom: 15px solid #7f7f7f;
-
-}
-.page-scrollTop .stick{
-	margin:0 auto;
-	padding-bottom:21px;
-	width: 13px;
-	border-bottom: 13px solid #bbb;
-	background-color: #7f7f7f;
-}
-
-.shadow-bottom-center{
-	background-color:#f8f8fd;
-	-webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
-	-moz-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
-	-o-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
-	box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
-}
-
-.word-keep{
-    display: inline-block;
-    word-break: keep-all;
-}
-
-.rectangle{
-	border-radius: 0px;
-}
-
-
-@media (min-width: 1200px){
-    .col-lg-offset-1_5 {
-        margin-left: 12.5%;
-    }
-}
-
-.pad-min,
-.pad-mid,
-.pad-lar{
-    display: block;
-}
-.pad-min{
-    height: 20px;
-}
-.pad-mid{
-    height: 50px;
-}
-.pad-lar{
-    height: 80px;
-}
-.scriptHub{
-    display: none!important;
-}
-
-.st-ui-stamp{
-    display: none!important;
-}
-
-/*** banner ***/
-.banner {
+html,
+body {
     width: 100%;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    background-color: #2ca6cb;
+    height: 100%;
+    overflow-x: hidden;
+}
+
+.m-active:hover {
+    background: rgb(224, 224, 224);
+}
+
+p {
+    margin-bottom: 0px;
+}
+
+a {
+    text-decoration: none;
+    color: #054cb3;
+}
+
+.tang-nav {
+    margin-bottom: 10px;
+    border-bottom: 1px solid #cecece;
+}
+
+.article-list {
+    padding: 0px;
+    border: 0;
+}
+
+.article-list .list-group-item {
+    border-left: 0px;
+    border-right: 0px;
+}
+
+.article-list .list-group-item:first-child {
+    border-top: 0px;
+}
+
+.article-list .list-group-item:last-child {
+    border-bottom: 0px;
+}
+
+.nav-link-active {
+    color: #f108d2 !important;
+    font-weight: 500;
+}
+
+.list-group-item .active {
+    background-color: #054cb3 !important;
+}
+
+.markdown-body pre {
+    border: 1px solid #d1d4d6;
+}
+
+nav .dropdown-menu {
+    margin-top: .55rem !important;
+    border-radius: 0 0px 5px 5px;
+    border-top: 0;
+}
+
+.yd {
     display: none;
 }
 
-.banner h1{
-    font-size: 50px;
-    font-weight: bold;
+.mini-but {
+    padding: 0px 5px 0px 3px;
+    margin-left: 5px
 }
 
-
-.banner h1,
-.banner h3{
-    color: #ffffff;
-    text-align: center;
-}
-.banner h3{
-    line-height: 1.5;
+.el-form-item__label {
+    text-align: left !important;
 }
 
-@media screen and (max-width: 767px) {
-    .banner h1{
-        font-size: 36px;
+@media (max-width: 768px) {
+    .pc {
+        display: none;
     }
+
+    .yd {
+        display: inline;
+    }
+
+    .list-group-item {
+        padding: 12px;
+    }
+
+    .card-body {
+        padding: 12px;
+    }
+
 }
 
-.search-button,#post-comment{
-    display: none !important;
+.nav-link {
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
+.t-b-b-1 {
+    border-bottom: 1px solid #cecece;
+}
+
+.t-b-m-1 {
+    padding: 0px 5px 0px 3px;
+    font-size: 13px
+}
+
+.list-group .active2 {
+    background-color: #f3f3f3;
+}
+
+.mr-10 {
+    margin-right: 10px;
+}
+
+.blog-btn {
+    padding: 0px 5px 0px 3px;
+    font-size: 13px
+}
+
+.tag{
+    display :inline-block ;
+    max-width:105px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
