--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
         </nav> -->
         <nav class="navbar navbar-expand navbar navbar-expand-lg navbar-light bg-light t-b-b-1 mb-2" id="top">
             <div class="container-fluid">
-              <a class="navbar-brand pc" href="/" style='margin-right: 0px;'>ooqn.com</a>
+              <a class="navbar-brand pc" href="/" style='margin-right: 0px;'>{{ site.title }}</a>
               <a class="navbar-brand yd" href="/" style='margin-right: 0px;'>🙃</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,27 +40,25 @@
         
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-lg-0 pc">
-                  <li class="nav-item"><router-link class="nav-link active" to="/article">📰文章</router-link></li>
-                  <li class="nav-item"><router-link class="nav-link active" to="/essay">📝随笔</router-link></li>
-                  <li class="nav-item"><router-link class="nav-link active" to="/author">👨‍🎓作者</router-link></li>
-                  <li class="nav-item"><router-link class="nav-link active" to="/subject">📒专题</router-link></li>
-                  <li class="nav-item"><router-link class="nav-link active" to="/search">🔍搜索</router-link></li>
-                  <li class="nav-item" v-if="isAdmin"><a class="nav-link active" href="/admin.html">🧙‍♂️管理</a></li>
+                  <li class="nav-item"><a class="nav-link active" href="/article">📰文章</a></li>
+                  <li class="nav-item"><a class="nav-link active" href="/essay">📝随笔</a></li>
+                  <li class="nav-item"><a class="nav-link active" href="/author">👨‍🎓作者</a></li>
+                  <li class="nav-item"><a class="nav-link active" href="/subject">📒专题</a></li>
+                  <li class="nav-item"><a class="nav-link active" href="/search">🔍搜索</a></li>
                 </ul>
                 <ul class="navbar-nav me-auto mb-lg-0 yd">
                   <li class="nav-item dropdown float-start">
                     <a class="nav-link active dropdown-toggle" href="#" data-bs-toggle="dropdown">菜单</a>
                     <ul class="dropdown-menu">
-                      <li><router-link class="dropdown-item" to="/article">📰文章</router-link></li>
-                      <li><router-link class="dropdown-item" to="/essay">📝随笔</router-link></li>
-                      <li><router-link class="dropdown-item" to="/author">👨‍🎓作者</router-link></li>
-                      <li><router-link class="dropdown-item" to="/subject">📒专题</router-link></li>
-                      <li><router-link class="dropdown-item" to="/search">🔍搜索</router-link></li>
-                      <li v-if="isAdmin"><a class="dropdown-item" href="/admin.html">🧙‍♂️管理</a></li>
+                      <li><a class="dropdown-item" href="/article">📰文章</a></li>
+                      <li><a class="dropdown-item" href="/essay">📝随笔</a></li>
+                      <li><a class="dropdown-item" href="/author">👨‍🎓作者</a></li>
+                      <li><a class="dropdown-item" href="/subject">📒专题</a></li>
+                      <li><a class="dropdown-item" href="/search">🔍搜索</a></li>
                     </ul>
                   </li>
                   <li class="nav-item float-start">
-                    <router-link class="nav-link active" to="/search">🔍搜索</router-link>
+                    <a class="nav-link active" href="/search">🔍搜索</a>
                   </li>
                 </ul>
                 <form class="d-flex d-md-inline">
