--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
     <footer  class="footnote footnote-tiffany">
-        <div class="container">
+        <div class="container-fluid">
                 <a class="foot-item" href="mailto:{{ site.email }}" target="_blank"><span class="octicon octicon-mail"></span></a>
                 <a class="foot-item" href="https://github.com/{{ site.github.username }}" target="_blank"><span class="octicon octicon-mark-github"></span></a>
                 <a class="foot-item" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}" target="_blank"><span class="octicon octicon-rss"></span></a>
