--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 {% include header.html %}
 
 <div class="main">
-    <div class="container">
+    <div class="container-fluid">
         {{ content }}
     </div>
     <div class="page-scrollTop" data-toggle="tooltip" data-placement="top" title="Top">
