--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,15 +2,16 @@
 layout: default
 ---
 <div class="row">
-    <div class="content">
-        <div class="sheet">
-            <header>
-                <h1>{{ page.title }}</h1>
-            </header>
-            <hr>
-            <article>
-                {{ content }}
-            </article>
-        </div>
+    <div class="col-md-9 mb-2">
+        <header>
+            <h1>{{ page.title }}</h1>
+        </header>
+        <hr>
+        <article>
+            {{ content }}
+        </article>
+    </div>
+    <div class="col-md-4 mb-2">
+        {% include all.html %}
     </div>
 </div>
