--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,15 +3,19 @@ layout: default
 ---
 <div class="row">
     <div class="col-md-9 mb-2">
-        <header>
-            <h1>{{ page.title }}</h1>
-        </header>
-        <hr>
-        <article>
-            {{ content }}
-        </article>
+        <div class="card mb-2">
+            <div class="card-body">
+                <header>
+                    <h1>{{ page.title }}</h1>
+                </header>
+                <hr>
+                <article>
+                    {{ content }}
+                </article>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4 mb-2">
+    <div class="col-md-3 mb-2">
         {% include all.html %}
     </div>
 </div>
