--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,90 +3,59 @@ layout: default
 ---
 <div class="row">
     <div class="content col-md-9">
-        <div class="sheet post">
-          <header>
-            <h2>{{ page.title }}</h2>
-            <p class="post-meta">
-                <span class="octicon octicon-clock"></span> {{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}
-            </p>
-            <p class="post-tag">
-                <span>{% for cat in page.categories %}<a href="{{ '/category' | prepend: site.baseurl | prepend: site.url }}/#{{ cat }}"><span class="octicon octicon-list-unordered"></span>&nbsp;{{ cat }}</a>{% endfor %}</span>
-                <span>{% for tag in page.tags %}
-                    <a class="word-keep" href="{{ '/tags' | prepend: site.baseurl | prepend: site.url }}/#{{ tag }}"><span class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a>
-                    {% endfor %}
-                </span>
-            </p>
-          </header>
-          <hr class="boundary">
-          <article>
-            {{content}}
-          </article>
+        <div class="card mb-2">
+            <div class="card-body">
+                <header>
+                    <h2>{{ page.title }}</h2>
+                    <p class="post-meta">
+                        <span class="octicon octicon-clock"></span> {{ page.date | date: "%b %-d, %Y" }}{% if
+                        page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}
+                    </p>
+                    <p class="post-tag">
+                        <span>{% for cat in page.categories %}<a
+                                href="{{ '/category' | prepend: site.baseurl | prepend: site.url }}/#{{ cat }}"><span
+                                    class="octicon octicon-list-unordered"></span>&nbsp;{{ cat }}</a>{% endfor %}</span>
+                        <span>{% for tag in page.tags %}
+                            <a class="word-keep"
+                                href="{{ '/tags' | prepend: site.baseurl | prepend: site.url }}/#{{ tag }}"><span
+                                    class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a>
+                            {% endfor %}
+                        </span>
+                    </p>
+                </header>
+                <hr class="boundary">
+                <article>
+                    {{content}}
+                </article>
+            </div>
         </div>
-        <div class="pad-min"></div>
     </div>
-    <div class="content-navigation col-md-3">
-      <div class="shadow-bottom-center md-2" >
-        <div class="content-navigation-toc">
-            <div class="content-navigation-header">
-                <span class="octicon octicon-list-unordered"></span>&nbsp;Toc
-            </div>
-            <div class="content-navigation-list toc"></div>
-        </div>
-        <div class="content-navigation-tag">
-            <div class="content-navigation-header">
-                <span class="octicon octicon-list-unordered"></span>&nbsp;Tags
-            </div>
-            <div class="content-navigation-list">
-                <ul>
+    <div class="col-md-3">
+        <div class="card mb-2">
+            <div class="card-body">
+                <div class="list-group mb-2">
+                    <a class="list-group-item active">Tags<span class="float-end">🎇</span></a>
                     {% for tag in page.tags %}
-                    <li>
-                        <a href="{{ '/tags' | prepend: site.baseurl | prepend: site.url }}#{{ tag }}"><span class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a>
-                    </li>
+                    <a class="list-group-item"
+                        href="{{ '/tags' | prepend: site.baseurl | prepend: site.url }}#{{ tag }}">{{ tag }}</a>
                     {% endfor %}
-                </ul>
-            </div>
-        </div>
-        <div class="content-navigation-related">
-            <div class="content-navigation-header">
-                <span class="octicon octicon-list-unordered"></span>&nbsp;Related
-            </div>
-            <div class="content-navigation-list">
-                <ul>
-                    {% assign postsAfterFilter = '-' | split: "-" %}
+                </div>
 
+                <div class="list-group mb-2">
+                    <a class="list-group-item active">Related<span class="float-end">🎇</span></a>
                     {% for p in site.posts %}
                         {%if p.url != page.url %}
-                            {% assign commonTagCount = 0 %}
-
-                            {% for tag in p.tags %}
-                                {% if page.tags contains tag %}
-                                    {% assign commonTagCount = commonTagCount | plus: 1 %}
-                                {% endif %}
-                            {% endfor %}
-
                             {% for cat in p.categories %}
-                                {% if page.categories contains cat %}
-                                    {% assign commonTagCount = commonTagCount | plus: 1 %}
+                                {% if page.categories = cat %}
+                                <a class="list-group-item" href="{{ p.url | prepend: site.baseurl | prepend: site.url }}">{{ p.title
+                                    }}</a>
                                 {% endif %}
                             {% endfor %}
-
-                            {% if commonTagCount > 0 %}
-                                {% assign postsAfterFilter = postsAfterFilter | push: p %}
-                            {% endif %}
                         {% endif %}
                     {% endfor %}
-
-                    {% if postsAfterFilter.size > 0 %}
-                        {% for p in postsAfterFilter limit: 15 %}
-                            <li>
-                                <a href="{{ p.url | prepend: site.baseurl | prepend: site.url }}">{{ p.title }}</a>
-                            </li>
-                        {% endfor %}
-                    {% endif %}
-                </ul>
+                </div>
             </div>
         </div>
-      </div>
-      {% include all.html %}
+        {% include all.html %}
     </div>
 </div>
