--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,8 +48,8 @@ layout: default
 
                 <div class="list-group mb-2">
                     <a class="list-group-item active">Related<span class="float-end">🎇</span></a>
-                    {{site.posts}}
-                    {% for p in site.posts %}
+                    {{page.categories}}
+                    <!-- {% for p in site.posts %}
                     {{p.categories}}
                         {% for cat in p.categories %}
                         {{cat}}
@@ -59,7 +59,7 @@ layout: default
                             </a>
                             {% endif %}
                         {% endfor %}
-                    {% endfor %}
+                    {% endfor %} -->
                 </div>
             </div>
         </div>
