--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,7 +47,7 @@ layout: default
         <div class="list-group mb-2">
             <a class="list-group-item active">Related<span class="float-end">🎇</span></a>
             {% assign postsAfterFilter = '-' | split: "-" %}
-            {% assign sorted_posts = site.posts | sort: 'title' %}
+            {% assign sorted_posts = site.posts | sort: 'order' %}
             {% for p in sorted_posts %}
 
                 {% assign commonTagCount = 0 %}
