--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,8 +47,7 @@ layout: default
 
                 {% for cat in p.categories %}
                     {% if page.categories contains cat %}
-                    {{page.url}} ： {{p.url}}
-                    <a class="list-group-item {{% if page.permalink == p.permalink %}}ia{{% endif %}}" href="{{ p.url | prepend: site.baseurl | prepend: site.url }}">{{ p.title }}</a>
+                    <a class="list-group-item {{% if page.url == p.url %}}ia{{% endif %}}" href="{{ p.url | prepend: site.baseurl | prepend: site.url }}">{{ p.title }}</a>
                     {% endif %}
                 {% endfor %}
 
