--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,9 +41,7 @@
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-lg-0 pc">
                   <li class="nav-item"><a class="nav-link active" href="/article">📰文章</a></li>
-                  <li class="nav-item"><a class="nav-link active" href="/essay">📝随笔</a></li>
-                  <li class="nav-item"><a class="nav-link active" href="/author">👨‍🎓作者</a></li>
-                  <li class="nav-item"><a class="nav-link active" href="/subject">📒专题</a></li>
+                  <li class="nav-item"><a class="nav-link active" href="/category">📒专题</a></li>
                   <li class="nav-item"><a class="nav-link active" href="/search">🔍搜索</a></li>
                 </ul>
                 <ul class="navbar-nav me-auto mb-lg-0 yd">
@@ -51,9 +49,7 @@
                     <a class="nav-link active dropdown-toggle" href="#" data-bs-toggle="dropdown">菜单</a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="/article">📰文章</a></li>
-                      <li><a class="dropdown-item" href="/essay">📝随笔</a></li>
-                      <li><a class="dropdown-item" href="/author">👨‍🎓作者</a></li>
-                      <li><a class="dropdown-item" href="/subject">📒专题</a></li>
+                      <li><a class="dropdown-item" href="/category">📒专题</a></li>
                       <li><a class="dropdown-item" href="/search">🔍搜索</a></li>
                     </ul>
                   </li>
