--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ layout: default
                     </p>
                 </header>
                 <hr class="boundary">
-                <article>
+                <article class="markdown-body">
                     {{content}}
                 </article>
             </div>
