--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,7 @@ layout: default
                     <h1>{{ page.title }}</h1>
                 </header>
                 <hr>
-                <article>
+                <article class="markdown-body">
                     {{ content }}
                 </article>
             </div>
