--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <a href="{{ site.baseurl }}/" class="logo"></a>
+  <div><a href="{{ site.baseurl }}/" class="logo"></a>牛马程序员</div>
   <nav class="menu">
     {% for menu in site.menu -%}
 
