--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <a href="{{ site.baseurl }}/" class="logo"></a><span>牛马程序员<span>
+  <a href="{{ site.baseurl }}/" class="logo"></a><span>牛马程序员</span>
   <nav class="menu">
     {% for menu in site.menu -%}
 
