--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="header">
-  <a href="{{ site.baseurl }}/" class="logo"></a><span>牛马程序员</span>
-  <nav class="menu">
+  <a href="{{ site.baseurl }}/" class="logo"></a><strong>牛马程序员</strong>
+  <nav class="menu f1">
     {% for menu in site.menu -%}
 
       {%- assign target = "" %}
