--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <a href="{{ site.baseurl }}/" class="logo"></a><strong>牛马程序员</strong>
+  <a href="{{ site.baseurl }}/" class="logo"></a><strong><a href="{{ site.baseurl }}/">牛马程序员</a></strong>
   <nav class="menu f1">
     {% for menu in site.menu -%}
 
