--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <a href="{{ site.baseurl }}/static/xml/rss.xml">RSS订阅</a>
   {%- comment %} 请保留主题来源，么么哒~ {% endcomment %}
   <span>Theme By</span>
-  <a href="https://github.com/TMaize/tmaize-blog">TMaize</a>
+  <a href="https://github.com/bobcbui/bobcbui">bobcbui</a>
 
   {%- if site.extCount %}
     <span>总访问量</span>
