--- a/docs/.vuepress/.temp/styles/index.scss
+++ b/docs/.vuepress/.temp/styles/index.scss
@@ -1,1 +1,1 @@
-@forward 'file:///C:/Users/bobcb/Desktop/Dd/vuepress-starter/docs/.vuepress/styles/index.scss';
+@forward 'file:///D:/AProject/bobcbui/docs/.vuepress/styles/index.scss';
