--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -1,3 +1,13 @@
 @import '../../../node_modules/swiper/swiper.css';
 @import '../../../node_modules/swiper/modules/navigation.css';
 @import '../../../node_modules/swiper/modules/pagination.css';
+
+.vp-content {
+  max-width: 1200px !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+:root{
+    --content-width: 1200px;
+}
