--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -11,3 +11,17 @@
 :root{
     --content-width: 1200px;
 }
+
+@media (max-width: 719px) {
+  .vp-navbar .vp-site-name,
+  .vp-site-name {
+    display: inline-block !important;
+    font-size: 18px !important;
+    margin-left: 8px !important;
+    vertical-align: middle !important;
+    max-width: 60vw !important;
+    white-space: nowrap !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+  }
+}
