--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -16,12 +16,19 @@
   .vp-navbar .vp-site-name,
   .vp-site-name {
     display: inline-block !important;
-    font-size: 18px !important;
-    margin-left: 8px !important;
-    vertical-align: middle !important;
-    max-width: 60vw !important;
-    white-space: nowrap !important;
-    overflow: hidden !important;
-    text-overflow: ellipsis !important;
+  }
+  // 包含vp-content属性的选择器
+  .vp-page [vp-content]  {
+    max-width: 100% !important;
+    padding-left: 16px !important;
+    padding-right: 16px !important;
+  }
+
+  .vp-feature{
+    padding: 0 !important;
+  }
+
+  .vp-page-meta {
+    display: none !important;
   }
 }
