--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -56,3 +56,8 @@
   flex-direction: column;
   justify-content: center;
 }
+
+.theme-default-content pre {
+  max-width: 100%;
+  box-sizing: border-box;
+}
